Fixing paginiation button misalignment in webkit

--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -56,6 +56,7 @@
 
 #post-pagination {
   padding-inline-start: 0;
+  -webkit-padding-start: 0;
 }
 
 footer {
